fixed login/signup button so it isn't squished on small screen

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -76,11 +76,9 @@ main section.categories-show {
 }
 
 .log {
-  position: relative;
-  left: 15px;
-  top: 15px;
-  bottom: 15px;
+  margin-left: 15px;
   text-align: auto;
+  font-size: 2em;
 }
 
 .review-form {
